# axum_study

./: .env  Cargo.toml  README.md
src/: db.rs  logger.rs  main.rs  redis_client.rs
src/study/: main-common.db.rs  main-cookie.rs  main-handle-static-file.rs  main-jwt.rs  main-layer.rs  main-middleware.rs  main-postgres.rs  main-redis-new.rs  main-redis.rs  main-request.rs  main-response.rs  main-route.rs  main-session.rs  main-template.rs  main-upload.rs
static/: axum-rs.word
templates/: index.html
