[package]
name = "axum-first"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.37.0", features = ['full'] }
axum =  { version = "0.7.5", features = ["multipart"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
bytes = "1.6.0"
headers = "0.4.0"
axum-extra = { version = "0.9.3", features = ["typed-header"] }
tower-http = { version = "0.5.2", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3.18"
async-trait="0.1"
tower = "0.4.13"
tower-cookies = "0.10.0"
redis = { version = "0.25.3", features = ["async-std-comp","tokio-comp"] }
dotenv = '0.15.0'
sqlx = {version = "0.7.4", features = [
  "postgres",
  "runtime-tokio", "tls-native-tls",
  "macros",
  "chrono",
  "time"
]}
uuid = { version = "1.8.0", features = ["serde", "v4"] }
jsonwebtoken = "9.3.0"
askama = "0.12.1"

[dev-dependencies]
anyhow = "1.0.81"